# custom-agentic-search

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  ov.conf  pyproject.toml  setup.py
input/: .gitkeep
output/source/: source.md  source_cleaned.md
output/source/chunks/: 000_NGÂN_HÀNG_TMCP_HÀNG_HẢI_VIỆT_NAM_VIETNAM_MARITIME_.md  001_CỘNG_HOÀ_XÃ_HỘI_CHỦ_NGHĨA_VIỆT_NAM_Độc_lập_Tự_do_H.md  002_CÔNG_BỐ_THÔNG_TIN_BẮT_THƯỜNG_EXTRAORDINARY_INFORMA.md  003_BÁO_CÁO_THƯỜNG_NIÊN_2024.md  004_GIÁ_TRỊ_BỀN_VỮNG_TIẾN_BƯỚC_TƯƠNG_LAI.md  005_MỤC_LỤC.md  006_DANH_MỤC_TỪ_VIẾT_TẮT.md  007_A_THÔNG_ĐIỆP_CỦA_CHỦ_TỊCH_HỘI_ĐỒNG_QUẢN_TRỊ_VÀ_TỔN.md  008_Kính_thưa_Quý_vị_Cổ_đông.md  009_2_Thông_điệp_của_Tổng_Giám_đốc.md  010_Kính_thưa_Quý_Khách_hàng_Đối_tác_và_Cổ_đông.md  011_B_THÔNG_TIN_CHUNG_VỀ_MSB.md  012_1_Thông_tin_khái_quát.md  013_Tầm_nhìn.md  014_Sứ_mệnh.md  015_Giá_trị_cốt_lõi.md  016_22_Chiến_lược_phát_triển_trung_và_dài_hạn_các_mục_.md  020_Trong_ngắn_hạn.md  (+367 more)
rag_qdrant/: __init__.py  settings.py
rag_qdrant/adapters/: __init__.py  config.py  custom_qdrant_adapter.py  identity.py  resilience.py
rag_qdrant/cli/: __init__.py  commands.py  health.py  ingest.py  query.py  session.py
rag_qdrant/embedding/: __init__.py  client.py
rag_qdrant/ingestion/: __init__.py  ov_bootstrap.py
rag_qdrant/observability/: __init__.py  logging.py  metrics.py
rag_qdrant/preprocessing/: __init__.py  chunker.py  marker_postprocess.py  msb_patches.json
rag_qdrant/retrieval/: __init__.py
scripts/: 00_verify_embed.sh  00_verify_qdrant.sh  01_run_marker.sh  02_ingest.py  03_test_query.py  04_quality_check.py  05_self_test.sh  check_no_secrets.sh
tests/: test_embedding_unit.py  test_ov_bootstrap.py  test_preprocessing.py
tests/adapters/: conftest.py  test_adapter.py  test_config.py  test_identity.py  test_resilience.py
